clusters/talos-ottawa/apps/media/app/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostname: jellyfin
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:preview
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: tv-4k 
              mountPath: /media/tv/4k
            - name: tv-1080p
              mountPath: /media/tv/1080p
            - name: tv-anime
              mountPath: /media/tv/anime
            - name: movies-4k
              mountPath: /media/movies/4k
            - name: movies-1080p
              mountPath: /media/movies/1080p
            - name: movies-4kremux
              mountPath: /media/movies/4kremux
            - name: music
              mountPath: /media/music
            - name: config
              mountPath: /config
      volumes:
        - name: tv-4k
          persistentVolumeClaim:
            claimName: sonarr-4k-tv
        - name: tv-1080p
          persistentVolumeClaim:
            claimName: sonarr-1080p-tv
        - name: tv-anime
          persistentVolumeClaim:
            claimName: sonarr-anime-tv
        - name: movies-4k
          persistentVolumeClaim:
            claimName: radarr-4k-movies
        - name: movies-1080p
          persistentVolumeClaim:
            claimName: radarr-1080p-movies
        - name: movies-4kremux
          persistentVolumeClaim:
            claimName: radarr-4kremux-movies
        - name: music
          persistentVolumeClaim:
            claimName: lidarr-music
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
