clusters/talos-ottawa/apps/media/app/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin-sts
  replicas: 1
  podManagementPolicy: Parallel
  persistentVolumeClaimRetentionPolicy:
    whenDeleted Delete
    whenScaled: Delete
  selector:
    matchLabels:
      app: jellyfin-sts
  template:
    metadata:
      labels:
        app: jellyfin-sts
    spec:
      hostname: jellyfin
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: tv-4k
              mountPath: /media/tv/4k
            - name: tv-1080p
              mountPath: /media/tv/1080p
            - name: tv-anime
              mountPath: /media/tv/anime
            - name: movies-4k
              mountPath: /media/movies/4k
            - name: movies-1080p
              mountPath: /media/movies/1080p
            - name: movies-4kremux
              mountPath: /media/movies/4kremux
            - name: movies-anime
              mountPath: /media/movies/anime
            - name: music
              mountPath: /media/music
            - name: config
              mountPath: /config
      volumes:
        - name: tv-4k
          persistentVolumeClaim:
            claimName: sonarr-4k-tv
        - name: tv-1080p
          persistentVolumeClaim:
            claimName: sonarr-1080p-tv
        - name: tv-anime
          persistentVolumeClaim:
            claimName: sonarr-anime-tv
        - name: movies-4k
          persistentVolumeClaim:
            claimName: radarr-4k-movies
        - name: movies-1080p
          persistentVolumeClaim:
            claimName: radarr-1080p-movies
        - name: movies-4kremux
          persistentVolumeClaim:
            claimName: radarr-4kremux-movies
        - name: movies-anime
          persistentVolumeClaim:
            claimName: radarr-anime-movies
        - name: music
          persistentVolumeClaim:
            claimName: lidarr-music
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
        dataSourceRef:
          kind: PersistentVolumeClaim
          name: jellyfin-config
