clusters/talos-ottawa/apps/media/app/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-sts
  labels:
    app: jellyfin-sts
spec:
  selector:
    app: jellyfin-sts
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  type: ClusterIP
